WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187168
[LFC] Out-of-flow positioned height does not necessarily equal to "bottom - top".
https://bugs.webkit.org/show_bug.cgi?id=187168
Summary
[LFC] Out-of-flow positioned height does not necessarily equal to "bottom - t...
alan
Reported
2018-06-28 19:24:27 PDT
While it sounds odd, according to the spec the following constraint needs to be satisfied: 'top' + 'margin-top' + 'border-top-width' + 'padding-top' + 'height' + 'padding-bottom' + 'border-bottom-width' + 'margin-bottom' + 'bottom' = height of containing block
Attachments
Patch
(2.00 KB, patch)
2018-06-28 19:36 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-06-28 19:36:17 PDT
Created
attachment 343888
[details]
Patch
alan
Comment 2
2018-06-28 20:45:55 PDT
Committed
r233348
: <
https://trac.webkit.org/changeset/233348
>
Radar WebKit Bug Importer
Comment 3
2018-06-28 20:46:27 PDT
<
rdar://problem/41616586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug