[LFC] Out-of-flow positioned height does not necessarily equal to "bottom - top". https://bugs.webkit.org/show_bug.cgi?id=187168

Reviewed by Antti Koivisto.

According to the spec "For absolutely positioned elements, the used values of the vertical dimensions must satisfy this constraint:
'top' + 'margin-top' + 'border-top-width' + 'padding-top' + 'height' + 'padding-bottom' + 'border-bottom-width' + 'margin-bottom' + 'bottom' = height of containing block"
With a non-auto "height" value, the bottom - top does not necessarily compute to the height of the element.

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::computeOutOfFlowVerticalGeometry const):

Canonical link: https://commits.webkit.org/202433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233348 268f45cc-cd09-0410-ab3c-d52691b4dbfc